--- a/web/pages/game.html
+++ b/web/pages/game.html
@@ -20,390 +20,8 @@
         <button type="button" class="btn btn-secondary btn-primary">Drag a Mine</button>
         <button type="button" class="btn btn-secondary btn-danger">Quit Match</button>
     </div>
-    <div class="row">
-        <div class="col-lg-6">
 
-
-            <table class="table table-bordered">
-                <thead>
-                <tr>
-                    <th>#</th>
-                    <th>A</th>
-                    <th>B</th>
-                    <th>C</th>
-                    <th>D</th>
-                    <th>E</th>
-                    <th>F</th>
-                    <th>G</th>
-
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">4</th>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">5</th>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">6</th>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">7</th>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-
-
-        </div>
-        <div class="col-lg-6">
-
-
-            <table class="table table-bordered">
-                <thead>
-                <tr>
-                    <th>#</th>
-                    <th>A</th>
-                    <th>B</th>
-                    <th>C</th>
-                    <th>D</th>
-                    <th>E</th>
-                    <th>F</th>
-                    <th>G</th>
-
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">4</th>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">5</th>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">6</th>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">7</th>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-default">~</button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-
-        </div>
-
-    </div>
+    <div id="gameBoards"></div>
 
     <div id="footer">All rights reserved to Barak Marziano & Tal Zamir - The Academic College of Tel-Aviv Yaffo</div>
 </div>
