--- a/web/pages/game.html
+++ b/web/pages/game.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../styles/game.css">
 
     <script src="../common/jquery-3.2.1.min.js"></script>
+    <script src="./js/Game.js"></script>
 
 </head>
 <body>
