--- a/web/pages/game.html
+++ b/web/pages/game.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../common/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/game.css">
+    <link rel="stylesheet" href="../styles/spinner.css">
 
     <script src="../common/jquery-3.2.1.min.js"></script>
     <script src="./js/Game.js"></script>
