--- a/web/pages/lobby.html
+++ b/web/pages/lobby.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="row">
-        <div class="col-lg-12 centerize-block">
+        <div class="col-lg-12">
             <h3 class="hdl-scondary">Active Rooms:</h3>
             <div class="list-group">
                 <div id="games-list"></div>
