--- a/web/pages/game.html
+++ b/web/pages/game.html
@@ -25,67 +25,8 @@
         <button type="button" class="btn btn-secondary btn-danger">Quit Match</button>
     </div>
 
-    <div class="row">
-        <div class="col-lg-6">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="hdl-stats">Personal Stats</div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    Name:
-                </div>
-                <div class="col-lg-4">
-                    Score:
-                </div>
-                <div class="col-lg-4">
-                    Mines:
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    Hits:
-                </div>
-                <div class="col-lg-4">
-                    Misses:
-                </div>
-                <div class="col-lg-4">
-                    Avg Time:
-                </div>
-            </div>
-        </div>
+    <div id="gameStats"></div>
 
-        <div class="col-lg-6">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="hdl-stats">Opponent Stats</div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    Name:
-                </div>
-                <div class="col-lg-4">
-                    Score:
-                </div>
-                <div class="col-lg-4">
-                    Mines:
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    Hits:
-                </div>
-                <div class="col-lg-4">
-                    Misses:
-                </div>
-                <div class="col-lg-4">
-                    Avg Time:
-                </div>
-            </div>
-        </div>
-    </div>
     <div id="gameBoards"></div>
 
     <div id="footer">All rights reserved to Barak Marziano & Tal Zamir - The Academic College of Tel-Aviv Yaffo</div>
