--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/index.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="/common/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="pages/js/Login.js"></script>
 </head>
 <body>
