--- a/web/pages/lobby.html
+++ b/web/pages/lobby.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <title>Welcome!</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="/common/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/Lobby.js"></script>
     <script type="text/javascript" src="js/Logout.js"></script>
 </head>
