--- a/web/pages/lobby.html
+++ b/web/pages/lobby.html
@@ -21,8 +21,9 @@
         <div class="col-lg-4 centerize-block">
             <h3>Welcome <span id="hdl-welcome2"></span></h3>
             <h5 class="text-desc">Welcome to the Battleship Game, the WEB edition. After we got our chance on the
-                console platfrom, party
-                like mads on the JavaFX, it's time to rock the bells on the net. So for what are you waiting for? Upload
+                console platform, party
+                like mads on the JavaFX, it's time to rock the bells on the net. So for what are you waiting for?
+                Upload
                 your game and let the fun begin!</h5>
             <button type="button" class="btn btn-secondary btn-lg btn-block" id="btn-logout" onclick="logout()">Logout
             </button>
