--- a/web/pages/game.html
+++ b/web/pages/game.html
@@ -21,7 +21,7 @@
         <button type="button" class="btn btn-secondary btn-primary" draggable="true"
                 ondragstart="drag(event)">Drag a Mine
         </button>
-        <button type="button" class="btn btn-secondary btn-danger">Quit Match</button>
+        <button type="button" class="btn btn-secondary btn-danger" onclick="quitRoom()">Quit Match</button>
     </div>
 
     <div id="gameStats"></div>
