--- a/web/index.html
+++ b/web/index.html
@@ -23,10 +23,9 @@
 
             <div class="login-container">
                 <div class="form-box">
-                    <form action="login" method="">
+                    <form action="" method="">
                         <input type="text" class="" id="username"/>
-                        <input type="submit" class="btn btn-primary btn-lg btn-block" id="btn-login" value="Sign Up"
-                               onclick="login()"/>
+                        <input type="submit" class="btn btn-primary btn-lg btn-block" id="btn-login" value="Sign Up"/>
                     </form>
                 </div>
             </div>
