--- a/web/pages/game.html
+++ b/web/pages/game.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/game.css">
     <link rel="stylesheet" href="../styles/spinner.css">
+    <link rel="stylesheet" href="../styles/chat.css">
 
     <script src="../common/jquery-3.2.1.min.js"></script>
     <script src="./js/Game.js"></script>
@@ -21,6 +22,8 @@
     <div id="gameStats"></div>
 
     <div id="gameBoards"></div>
+
+    <div id="chatArea"></div>
 
     <div id="footer">All rights reserved to Barak Marziano & Tal Zamir - The Academic College of Tel-Aviv Yaffo</div>
 </div>
