--- a/web/index.html
+++ b/web/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link rel="stylesheet" href="../common/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/global.css">
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="common/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/index.css">
 
-    <script src="/common/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="pages/js/Login.js"></script>
+    <script src="common/jquery-3.2.1.min.js"></script>
+    <script src="pages/js/Login.js"></script>
 </head>
 <body>
 <div class="container">
@@ -23,7 +23,7 @@
 
             <div class="login-container">
                 <div class="form-box">
-                    <form action="" method="">
+                    <form action="./" method="">
                         <input type="text" class="" id="username"/>
                         <input type="submit" class="btn btn-primary btn-lg btn-block" id="btn-login" value="Sign Up"/>
                     </form>
